force-app/main/default/objects/Transaction__e/Transaction__e.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <pluralLabel>Transactions</pluralLabel>
</CustomObject>