force-app/main/default/objects/Transaction__e/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <label>Apex Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>