force-app/main/default/objects/Transaction__e/fields/AvalaraIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>AvalaraIntegrationStatus__c</fullName>
    <label>Avalara Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>