force-app/main/default/objects/Transaction__e/fields/AvalaraVATReportingStatus__c.field-meta.xml
<CustomField>
    <fullName>AvalaraVATReportingStatus__c</fullName>
    <label>Avalara VAT Reporting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>