force-app/main/default/objects/Transaction__e/fields/DocumentDescription__c.field-meta.xml
<CustomField>
    <fullName>DocumentDescription__c</fullName>
    <label>Document Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>