force-app/main/default/objects/Transaction__e/fields/DocumentReference2__c.field-meta.xml
<CustomField>
    <fullName>DocumentReference2__c</fullName>
    <label>Document Reference 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>