force-app/main/default/objects/Transaction__e/fields/DocumentReference__c.field-meta.xml
<CustomField>
    <fullName>DocumentReference__c</fullName>
    <label>Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>