force-app/main/default/objects/Transaction__e/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>MatchType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>