force-app/main/default/objects/Transaction__e/fields/ReverseReason__c.field-meta.xml
<CustomField>
    <fullName>ReverseReason__c</fullName>
    <label>Reverse Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>