force-app/main/default/objects/Transaction__e/fields/SequentialTransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>SequentialTransactionNumber__c</fullName>
    <label>Sequential Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>