force-app/main/default/objects/Transaction__e/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>