force-app/main/default/objects/Transaction__e/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>