force-app/main/default/objects/Transaction__e/fields/UnitOfWork__c.field-meta.xml
<CustomField>
    <fullName>UnitOfWork__c</fullName>
    <label>Unit of Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>