force-app/main/default/objects/Transaction__e/fields/VendorDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>VendorDocumentNumber__c</fullName>
    <label>Vendor Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>